find_package(OpenCV QUIET COMPONENTS core highgui imgproc imgcodecs)
if(NOT OpenCV_FOUND)
    find_package(OpenCV QUIET COMPONENTS core highgui imgproc)
endif()

if(OpenCV_FOUND)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
    include_directories(${CMAKE_CURRENT_BINARY_DIR}/../src)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../model)
    add_executable(retinaface retinaface_main.cpp retina_face.h)
    target_compile_options(retinaface PRIVATE -std=c++11)
    target_link_libraries(retinaface PRIVATE ncnn ${OpenCV_LIBS})
    set_property(TARGET retinaface PROPERTY FOLDER "retinaface")
else()
    message(WARNING "OpenCV not found, retinaface won't be built")
endif()
